manifests/v1beta1/installs/katib-external-db/katib-db-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-db-manager
spec:
  template:
    spec:
      containers:
        - name: katib-db-manager
