manifests/v1beta1/installs/katib-external-db/ui-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katib-ui
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /katib/
      rewrite:
        uri: /katib/
      route:
        - destination:
            host: katib-ui.kubeflow.svc.cluster.local
            port:
              number: 80
